<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="user_avatar">User avatar</string>
    <string name="menu_button_description">Menu button</string>
    <string name="likes_count" translatable="false">10</string>
    <string name="share_icon">Share icon</string>
    <string name="likes_icon">Likes icon</string>
    <string name="share_cunt" translatable="false">5</string>
    <string name="views_count" translatable="false">5</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="text_is_blank">Text is blank!</string>
    <string name="edit">Edit</string>
    <string name="save_button">Save button</string>
    <string name="cancel_button">Cancel button</string>
    <string name="edit_message">Edit Message</string>
    <string name="original_message_text">Original message text…</string>
    <string name="app_is_not_found">App is not found</string>
    <string name="text_is_blank_error">Text is blank!</string>
    <string name="add_post">Add post</string>
    <string name="edit_mode">Edit mode</string>
    <string name="new_post">New post</string>
    <string name="vide_preview">Video preview</string>
    <string name="views_icon">Views icon</string>
    <string name="play_button">Play button</string>
    <string name="no_app_found">No app found</string>
    <string name="google_play_unavailable">Google play unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="author_of_new_post_push_notification_title">User %1$s published a new post:</string>
    <string name="no_posts">No posts</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="sync_icon">Sync icon</string>
    <string name="press_to_try_again">Press to try again</string>
    <string name="new_posts">New posts</string>
    <string name="save">save</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="photo_description">Photo description</string>
    <string name="image_attacment">Image attacment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <!-- Strings related to login -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_button">Sign in</string>
    <string name="choose_photo_button">Choose photo</string>
    <string name="name">Name</string>
    <string name="login_field">Login</string>
    <string name="password_field">Password</string>
    <string name="confirm_password">Confirm password</string>
</resources>